Updates and fixes
* Minor code fixes
* Addition of LocalDateTime element type